Plan your visit top nav spacing fix

--- a/CSS/nav-bar.css
+++ b/CSS/nav-bar.css
@@ -164,6 +164,11 @@ input[type="checkbox"]:checked ~ label span:nth-child(3) {
   margin: 0 8px;
 }
 
+.top-space {
+  width: 100%;
+  height: 250px;
+}
+
 @media (max-width: 768px) {
   .menu {
     position: absolute;
@@ -201,5 +206,10 @@ input[type="checkbox"]:checked ~ label span:nth-child(3) {
 
   p {
     margin: 35px 50px;
+  }
+
+  .top-space {
+    width: 100%;
+    height: 200px;
   }
 }
